# Only1MCP

./: .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  docker-compose.yml  rustfmt.toml
.claude/commands/: daily-log.md  fix-failing-tests.md  memory-update.md  next-phase-feature.md  phase-commit.md  phase-report.md  rust-check.md  session-summary.md  sub-agent.md  update-docs.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: batching.rs  caching.rs  end_to_end.rs  load_balancing.rs  transport.rs
benches/common/: metrics.rs  mock.rs  mod.rs
config/templates/: enterprise.yaml  solo.yaml  team.yaml
deployments/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
deployments/systemd/: only1mcp.service
dev-logs/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ALIGNMENT_AUDIT.md  ARCHITECTURE_AUDIT_SUMMARY.md  CLI_REFERENCE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EXTRACTION_SUMMARY.md  MONITORING_GUIDE.md  NWS_HTTP_TRANSPORT_RESEARCH.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  TROUBLESHOOTING.md  performance_benchmarking.md  request_batching.md  sse_transport.md  tui_interface.md
ref_docs/: 00-Only1MCP_Grok-Project_Statement.md  01-Only1MCP_ChatGPT-Project_Guide.md  02-Only1MCP_Claude-Development_Spec.md  03-Only1MCP_API_Specification.md  04-Only1MCP_Security_Architecture.md  05-Only1MCP_Implementation_Roadmap.md  06-Only1MCP_Testing_Strategy.md  07-Only1MCP_Deployment_Operations.md  08-Only1MCP_Developer_Onboarding.md  09-Only1MCP_User_Doc_Strategy.md  10-Only1MCP_Community_Engage_MarketPlan.md  11-Only1MCP_Configuration_Schema_Examples.md  12-Only1MCP_Monitoring_Observability_Implementation.md  13-Only1MCP_Performance_Benchmarking_Suite.md  14-Only1MCP_Core_Proxy_Implementation_Guide.md  15-Only1MCP_Context_Optimization_Algorithms.md  16-Only1MCP_Hot-Reload_Zero-Downtime_Patterns.md  17-Only1MCP_Backend_Discovery_Health_Checking.md  18-Only1MCP_Plugin_System_Architecture.md  19-Only1MCP_AI-Driven_Optimization_Roadmap.md  20-Only1MCP_Enterprise_Features.md  21-Only1MCP_Architecture_Diagrams.md  22-Only1MCP_AI_Client_Integration_Guide.md  README.md
src/: error.rs  lib.rs  main.rs
src/auth/: jwt.rs  mod.rs  oauth.rs  rbac.rs
src/batching/: mod.rs
src/cache/: mod.rs
src/config/: loader.rs  mod.rs  validation.rs  watcher.rs
src/daemon/: mod.rs  signals.rs
src/health/: checker.rs  circuit_breaker.rs  mod.rs
src/metrics/: mod.rs
src/plugin/: mod.rs
src/proxy/: handler.rs  mod.rs  registry.rs  router.rs  server.rs
src/routing/: load_balancer.rs  mod.rs
src/transport/: http.rs  mod.rs  sse.rs  stdio.rs  streamable_http.rs  websocket.rs
src/tui/: app.rs  client.rs  event.rs  metrics.rs  mod.rs  tests.rs  ui.rs
src/tui/tabs/: cache.rs  logs.rs  mod.rs  overview.rs  requests.rs  servers.rs
src/types/: mod.rs
tests/: daemon_lifecycle.rs  end_to_end_integration.rs  health_checking.rs  request_batching.rs  response_caching.rs  server_startup.rs  sse_transport.rs  stdio_init_test.rs  streamable_http_transport.rs  tui_interface.rs
tests/common/: mod.rs
to-dos/: MASTER_TODO.md  MASTER_TRACKER.md  PHASE_1_MVP_COMPLETION.md  PHASE_1_MVP_TODO.md
to-dos/Phase_1/: MISSION_ACCOMPLISHED.md  PHASE_1_MVP_COMPLETION_REPORT.md
to-dos/Phase_2/: PHASE_1_ANALYSIS_REPORT.md  PHASE_2_MASTER_PLAN.md  PHASE_2_PROGRESS_REPORT_OCT17_2025.md
